--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,4 @@ include (SeqAnCtdSetup)
 
 add_subdirectory(nexus-pre)
 add_subdirectory(test-app)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../seqan/apps/seqan_flexbar ${CMAKE_CURRENT_BINARY_DIR}/flexbar)
