--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,20 @@ include (package)
 include (SeqAnCtdSetup)
 
 # Search SeqAn and select dependencies.
-set (SEQAN_FIND_DEPENDENCIES NONE)
+set (SEQAN_FIND_DEPENDENCIES OpenMP ZLIB)
 find_package (SeqAn REQUIRED)
+
+
+# Warn if OpenMP was not found.
+if (NOT ${SEQAN_HAS_OPENMP})
+    message (WARNING "WARNING WARNING WARNING\nWARNING: OpenMP not found. nexus-pre will be built without multi-threading! "
+    "This is probably not what you want! Use GCC or a very, very recent version of Clang.\nWARNING WARNING WARNING")
+endif (NOT ${SEQAN_HAS_OPENMP})
+
+# Warn if Zlib was not found.
+if (NOT ${SEQAN_HAS_ZLIB})
+  message (WARNING "WARNING: Zlib not found. Building nexus-pre without gzipped input and output.")
+endif (NOT ${SEQAN_HAS_ZLIB})
 
 # ----------------------------------------------------------------------------
 # Build Setup
