--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ seqan_setup_library ()
 include (package)
 include (SeqAnCtdSetup)
 find_package (SeqAn REQUIRED)
-find_package (FindCXX11 REQUIRED)
+find_package (CXX11 REQUIRED)
 
 # Add definitions set by the build system.
 add_definitions (-DSEQAN_APP_VERSION="${SEQAN_APP_VERSION}")
