--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ seqan_setup_library ()
 include (package)
 include (SeqAnCtdSetup)
 find_package (SeqAn REQUIRED)
-#find_package (CXX11 REQUIRED)
+find_package (CXX11 REQUIRED)
 find_package (CXX14 REQUIRED)
 
 # Add definitions set by the build system.
@@ -35,7 +35,7 @@ add_definitions (-DSEQAN_REVISION="${SEQAN_REVISION}")
 add_definitions (-DSEQAN_DATE="${SEQAN_DATE}")
 
 # Add CXX flags found by find_package (SeqAn).
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
 
 add_subdirectory(nexus-pre)
 add_subdirectory(test-app)
