changed ting command options
updated windows binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ if(LINUX_STATIC)
 	SET(CMAKE_EXE_LINKER_FLAGS "-static")
 #	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
 else()
-	add_definitions (-DBOOST_ALL_DYN_LINK)
+#	add_definitions (-DBOOST_ALL_DYN_LINK)
 endif(LINUX_STATIC)
 
 # include(include/seqan/CMakeLists.txt)
