--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 # Load SeqAn build system
 # ----------------------------------------------------------------------------
 
-project (seqan)
+project (NexusTools)
 cmake_minimum_required (VERSION 2.8.2)
 set (CMAKE_INCLUDE_PATH
     ${CMAKE_CURRENT_SOURCE_DIR}/../seqan/include
@@ -52,12 +52,14 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${SEQAN_CXX_FLAGS} $
 add_subdirectory(nexus-pre)
 add_subdirectory(test-app)
 add_subdirectory(ting)
+add_subdirectory(MappingAnalyzer)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../seqan/apps/seqan_flexbar ${CMAKE_CURRENT_BINARY_DIR}/flexbar)
 
 if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(ting PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(seqan_flexlib PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(seqan_flexbar PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexAR PROPERTIES LINK_SEARCH_END_STATIC 1)
