--- a/test-app/CMakeLists.txt
+++ b/test-app/CMakeLists.txt
@@ -7,6 +7,10 @@ add_definitions (-DSEQAN_APP_VERSION="1.0.0")
 # Search SeqAn and select dependencies.
 set (SEQAN_FIND_DEPENDENCIES OpenMP ZLIB)
 find_package (SeqAn REQUIRED)
+find_package (CXX11 REQUIRED)
+find_package (CXX14 REQUIRED)
+
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
 
 # Warn if OpenMP was not found.
 if (NOT ${SEQAN_HAS_OPENMP})
@@ -16,7 +20,7 @@ endif (NOT ${SEQAN_HAS_OPENMP})
 
 # Warn if Zlib was not found.
 if (NOT ${SEQAN_HAS_ZLIB})
-  message (WARNING "WARNING: Zlib not found. Building nexus-pre without gzipped input and output.")
+  message (WARNING "WARNING: Zlib not found. Building test-app without gzipped input and output.")
 endif (NOT ${SEQAN_HAS_ZLIB})
 
 # Add definitions set by find_package (SeqAn).
