[FIX] build fix for gcC new linux binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(ting PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(seqan_flexlib PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(seqan_flexbar PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(flexlib PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(flexbar++ PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexAR PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexDMulti PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexFilter PROPERTIES LINK_SEARCH_END_STATIC 1)
