--- a/flexbar++/CMakeLists.txt
+++ b/flexbar++/CMakeLists.txt
@@ -98,7 +98,7 @@ set_target_properties (sflexDMulti PROPERTIES COMPILE_DEFINITIONS "FLEX_PROG=DEM
 set_target_properties (sflexFilter PROPERTIES COMPILE_DEFINITIONS "FLEX_PROG=FILTERING")
 
 # Add CXX flags found by find_package (SeqAn).
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
+set (CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
 
 # ----------------------------------------------------------------------------
 # Installation
@@ -138,7 +138,7 @@ set (SEQAN_CTD_EXECUTABLES ${SEQAN_CTD_EXECUTABLES} ${KNIME_FLEX_NODES} CACHE IN
 
 if (SEQAN_BUILD_SYSTEM STREQUAL "APP:flexbar++")
   set (CPACK_PACKAGE_NAME "flexbar++")
-  set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "SeqAn::Flexbar++ - Flexible barcode and adapter removal for sequencing platforms in SeqAn")
+  set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "Flexbar++ - Flexible barcode and adapter removal for sequencing platforms in SeqAn")
   set (CPACK_DEBIAN_PACKAGE_MAINTAINER "Benjamin Menkuec <benjamin@menkuec.de>")
   set (CPACK_PACKAGE_VENDOR "SeqAn Team, FU Berlin")
 
