build fix windows

--- a/flexbar++/CMakeLists.txt
+++ b/flexbar++/CMakeLists.txt
@@ -97,8 +97,12 @@ set_target_properties (sflexAR PROPERTIES COMPILE_DEFINITIONS "FLEX_PROG=ADAPTER
 set_target_properties (sflexDMulti PROPERTIES COMPILE_DEFINITIONS "FLEX_PROG=DEMULTIPLEXING")
 set_target_properties (sflexFilter PROPERTIES COMPILE_DEFINITIONS "FLEX_PROG=FILTERING")
 
-# Add CXX flags found by find_package (SeqAn).
-set (CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
+# Set CXX flags 
+if (NOT MSVC)
+set (CMAKE_CXX_FLAGS "-pthread ${CMAKE_CXX_FLAGS}")
+endif (NOT MSVC)
+
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
 
 # ----------------------------------------------------------------------------
 # Installation
