changed name to flexcat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,14 +51,14 @@ add_definitions (-D_MULTITHREADED_IO)
 add_subdirectory(nexus-pre)
 add_subdirectory(test-app)
 add_subdirectory(MappingAnalyzer)
-add_subdirectory(flexbar++)
+add_subdirectory(flexcat)
 
 if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(flexlib PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(flexbar++ PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(flexcat PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexAR PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexDMulti PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(sflexFilter PROPERTIES LINK_SEARCH_END_STATIC 1)
