--- a/test-app/CMakeLists.txt
+++ b/test-app/CMakeLists.txt
@@ -1,22 +1,16 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required (VERSION 2.8.2)
 project(test-app)
 message (STATUS "Configuring test-app")
 
 add_definitions (-DSEQAN_APP_VERSION="1.0.0")
 
 # Search SeqAn and select dependencies.
-set (SEQAN_FIND_DEPENDENCIES OpenMP ZLIB)
+set (SEQAN_FIND_DEPENDENCIES ZLIB)
 find_package (SeqAn REQUIRED)
 find_package (CXX11 REQUIRED)
 find_package (CXX14 REQUIRED)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SEQAN_CXX_FLAGS} ${CXX11_CXX_FLAGS} ${CXX14_CXX_FLAGS}")
-
-# Warn if OpenMP was not found.
-if (NOT ${SEQAN_HAS_OPENMP})
-    message (WARNING "WARNING WARNING WARNING\nWARNING: OpenMP not found. test-app will be built without multi-threading! "
-    "This is probably not what you want! Use GCC or a very, very recent version of Clang.\nWARNING WARNING WARNING")
-endif (NOT ${SEQAN_HAS_OPENMP})
 
 # Warn if Zlib was not found.
 if (NOT ${SEQAN_HAS_ZLIB})
