--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 # ----------------------------------------------------------------------------
 
 project (NexusTools)
-cmake_minimum_required (VERSION 2.8.2)
+cmake_minimum_required (VERSION 2.8.12)
 
 if(LINUX_STATIC)
 	message("building with linux static libs")
@@ -15,10 +15,8 @@ if(LINUX_STATIC)
 	SET(BUILD_SHARED_LIBRARIES OFF)
 	SET(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} " -static -static-libgcc -static-libstdc++")
     set(Boost_USE_STATIC_LIBS ON)
-#    set(LINK_SEARCH_START_STATIC ON)
-    set(LINK_SEARCH_END_STATIC ON)
+    #set(LINK_SEARCH_END_STATIC ON)
     set(SEQAN_LIBRARIES ${SEQAN_LIBRARIES} "-Wl,--whole-archive -lpthread -Wl,--no-whole-archive")
-#	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
 else()
 #	add_definitions (-DBOOST_ALL_DYN_LINK)
 endif(LINUX_STATIC)
@@ -64,4 +62,5 @@ if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(test_sflex_demultiplex PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test_sflex_general_processing PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test_sflex_trimming PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(test_sflex_adapter PROPERTIES LINK_SEARCH_END_STATIC 1)	
 endif(LINUX_STATIC)
