updated cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,8 +58,8 @@ if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(flexcatDMulti PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(flexcatFilter PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(flexcatQC PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(test_sflex_demultiplex PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(test_sflex_general_processing PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(test_sflex_trimming PROPERTIES LINK_SEARCH_END_STATIC 1)
-	SET_TARGET_PROPERTIES(test_sflex_adapter PROPERTIES LINK_SEARCH_END_STATIC 1)	
+	SET_TARGET_PROPERTIES(test_demultiplex PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(test_general_processing PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(test_trimming PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(test_adapter PROPERTIES LINK_SEARCH_END_STATIC 1)	
 endif(LINUX_STATIC)
