--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,12 +48,14 @@ add_subdirectory(test-app)
 add_subdirectory(MappingAnalyzer)
 add_subdirectory(flexcat)
 add_subdirectory(5PrimeEndCounter)
+add_subdirectory(ting)
 
 if(LINUX_STATIC)
 	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(5PrimeEndCounter PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(ting PROPERTIES LINK_SEARCH_END_STATIC 1)	
 	SET_TARGET_PROPERTIES(flexlib PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(flexcat PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(flexcatAR PROPERTIES LINK_SEARCH_END_STATIC 1)
