changed name from nexus-pre to nexcat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ include (SeqAnCtdSetup)
 add_definitions (-DSEQAN_REVISION="${SEQAN_REVISION}")
 add_definitions (-DSEQAN_DATE="${SEQAN_DATE}")
 
-add_subdirectory(nexus-pre)
+add_subdirectory(nexcat)
 add_subdirectory(test-app)
 add_subdirectory(MappingAnalyzer)
 add_subdirectory(flexcat)
@@ -51,7 +51,7 @@ add_subdirectory(5PrimeEndCounter)
 add_subdirectory(ting)
 
 if(LINUX_STATIC)
-	SET_TARGET_PROPERTIES(nexus-pre PROPERTIES LINK_SEARCH_END_STATIC 1)
+	SET_TARGET_PROPERTIES(nexcat PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(5PrimeEndCounter PROPERTIES LINK_SEARCH_END_STATIC 1)
