--- a/flexcat/CMakeLists.txt
+++ b/flexcat/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.2)
-project (Flexcat)
+project (flexcat)
 message (STATUS "Configuring flexcat")
 
 set (SEQAN_APP_VERSION "1.0.0")
