--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,8 +49,10 @@ add_subdirectory(MappingAnalyzer)
 add_subdirectory(flexcat)
 add_subdirectory(5PrimeEndCounter)
 add_subdirectory(ting)
+add_subdirectory(readsim)
 
 if(LINUX_STATIC)
+	SET_TARGET_PROPERTIES(readsim PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(nexcat PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(test-app PROPERTIES LINK_SEARCH_END_STATIC 1)
 	SET_TARGET_PROPERTIES(MappingAnalyzer PROPERTIES LINK_SEARCH_END_STATIC 1)
